--- a/Externals_CAM.cfg
+++ b/Externals_CAM.cfg
@@ -15,8 +15,8 @@ required = True
 [cosp2]
 local_path = src/physics/cosp2/src
 protocol = svn
-repo_url = https://github.com/CFMIP/COSPv2.0/branches
-branch =  clean_up_modis_masking/src
+repo_url = https://github.com/CFMIP/COSPv2.0/release_tags
+branch =  v2.1.4cesm/src
 required = True
 
 [clubb]
