--- a/Externals_CAM.cfg
+++ b/Externals_CAM.cfg
@@ -15,7 +15,7 @@ required = True
 [cosp2]
 local_path = src/physics/cosp2/src
 protocol = svn
-repo_url = https://github.com/CFMIP/COSPv2.0/release_tags
+repo_url = https://github.com/CFMIP/COSPv2.0/tags
 branch =  v2.1.4cesm/src
 required = True
 
